spartanweaponry + better rivers

--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -223,6 +223,7 @@ entitiesalwaysinfernal {
     B:"mocreatures:wraith"=false
     B:"mocreatures:wwolf"=false
     B:naga=false
+    B:pirate_mimic=false
     B:"quark:ashen"=false
     B:"quark:dweller"=false
     B:"quark:pirate"=false
@@ -230,9 +231,9 @@ entitiesalwaysinfernal {
     B:stymphalianbird=false
     B:treant=false
     B:trumpetskeleton.TrumpetSkeleton=false
+    B:twilightforest.lich=false
     B:twilightforest.minoshroom=false
     B:twilightforest.snow_queen=false
-    B:twilightforest.lich=false
     B:wendigo=false
 }
 
@@ -361,10 +362,11 @@ entitybasehealth {
     D:MoCEntityWraith=10.0
     D:Silverfish=8.0
     D:Skeleton=20.0
+    D:Slime=22.388212203979492
     D:Spider=16.0
     D:Witch=37.50556182861328
     D:WitherSkeleton=46.166046142578125
-    D:Zombie=98.81472778320312
+    D:Zombie=20
     D:ZombieVillager=20.0
     D:barakoana=10.0
     D:barakoaya=10.0
@@ -392,11 +394,12 @@ entitybasehealth {
     D:"mocreatures:horsemob"=30.0
     D:"mocreatures:manticore"=40.0
     D:"mocreatures:minigolem"=15.0
-    D:"mocreatures:rat"=31.084936141967773
-    D:"mocreatures:scorpion"=32.48357391357422
-    D:"mocreatures:silverskeleton"=35.14849090576172
+    D:"mocreatures:rat"=10
+    D:"mocreatures:scorpion"=15
+    D:"mocreatures:silverskeleton"=20
     D:"mocreatures:werewolf"=40.0
     D:"mocreatures:wraith"=10.0
+    D:pirate_mimic=35.0
     D:"quark:ashen"=20.0
     D:"quark:dweller"=20.0
     D:"quark:pirate"=20.0
@@ -675,8 +678,8 @@ permittedentities {
     B:"mocreatures:werewolf"=true
     B:"mocreatures:wraith"=true
     B:"mocreatures:wwolf"=true
-    B:pirate_mimic=true
     B:naga=true
+    B:pirate_mimic=true
     B:"quark:ashen"=true
     B:"quark:dweller"=true
     B:"quark:pirate"=true
@@ -684,9 +687,9 @@ permittedentities {
     B:stymphalianbird=true
     B:treant=true
     B:trumpetskeleton.TrumpetSkeleton=true
+    B:twilightforest.lich=true
     B:twilightforest.minoshroom=true
     B:twilightforest.snow_queen=true
-    B:twilightforest.lich=true
     B:wendigo=true
 }
 
