--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -476,7 +476,6 @@ client {
         S:"Additional Stacks" <
          >
         S:"Items to Test" <
-            minecraft:diamond_sword
             minecraft:diamond_pickaxe
             minecraft:diamond_shovel
             minecraft:diamond_axe
@@ -486,10 +485,20 @@ client {
             minecraft:diamond_leggings
             minecraft:diamond_boots
             minecraft:shears
-            minecraft:bow
-            minecraft:fishing_rod
+            aquaculture:fishing_rod
             minecraft:elytra
+            spartanweaponry:boomerang_diamond
             quark:pickarang
+            spartanweaponry:longsword_diamond
+            spartanshields:shield_basic_diamond
+            spartanweaponry:throwing_knife_diamond
+            spartanweaponry:longbow_wood
+            spartanweaponry:crossbow_wood
+            minecraft:anvil
+            defiledlands:umbra_blaster
+            defiledlands:tears_shulker
+            defiledlands:the_ravager
+            defiledlands:concussion_smasher
          >
     }
 
@@ -1025,16 +1034,16 @@ misc {
         I:"Harvest Level"=3
 
         # 22.5 is ender chests, 25.0 is monster boxes, 50 is obsidian. Most things are below 5.
-        D:"Max mining hardness"=20.0
+        D:"Max mining hardness"=25.0
 
         # Set this to true to use the recipe without the Heart of Diamond, even if the Heart of Diamond is enabled
         B:"Never Use Heart of Diamond"=false
 
         # Set this to true to disable the short cooldown between throwing pickarangs
-        B:"No Cooldown"=true
+        B:"No Cooldown"=false
 
         # How long it takes for the pickarang to return to the player if it doesn't hit anything
-        I:Timeout=20
+        I:Timeout=10
     }
 
     "endermites into shulkers" {
@@ -1214,9 +1223,9 @@ misc {
 
 
 tweaks {
-    B:"Allow crafting stone tools using flint"=true
+    B:"Allow crafting stone tools using flint"=false
     B:"Armed armor stands"=true
-    B:"Automatic recipe unlock"=true
+    B:"Automatic recipe unlock"=false
     B:"Axes break leaves"=true
     B:"Baby zombies burn"=true
     B:"Blastproof shulker boxes"=true
@@ -1254,7 +1263,7 @@ tweaks {
 
     "squids ink you" {
         # How long should blindness last upon hitting a squid, in ticks
-        I:"Blindness Time"=40
+        I:"Blindness Time"=30
     }
 
     "sheep have armor while wearing wool" {
@@ -1379,6 +1388,8 @@ tweaks {
             minecraft:rabbit_stew|64
             minecraft:beetroot_soup|64
             minecraft:saddle|8
+            toughasnails:purified_water_bottle|3
+            minecraft:boat|8
          >
     }
 
