--- a/config/reskillable.cfg
+++ b/config/reskillable.cfg
@@ -133,6 +133,7 @@ general {
         biomesoplenty:gem_ore:6:*=reskillable:mining|10
         biomesoplenty:gem_ore:7:*=reskillable:mining|10
         mysticalworld:copper_ore:*=reskillable:mining|2
+        mysticalworld:silver_ore:*=reskillable:mining|4,reskillable:magic|4
         mysticalworld:amethyst_ore:*=reskillable:mining|4,reskillable:magic|4
         thaumcraft:ore_quartz:*=reskillable:mining|4
         thaumcraft:ore_amber:*=reskillable:mining|4,reskillable:magic|4
@@ -646,7 +647,7 @@ general {
         spartanweaponry:dagger_diamond:*=reskillable:agility|16
         spartanweaponry:longsword_diamond:*=reskillable:attack|16
         spartanweaponry:katana_diamond:*=reskillable:agility|16
-        spartanweaponry:saber_diamond::*=reskillable:attack|16
+        spartanweaponry:saber_diamond:*=reskillable:attack|16
         spartanweaponry:rapier_diamond:*=reskillable:agility|16
         spartanweaponry:greatsword_diamond:*=reskillable:attack|16
         spartanweaponry:hammer_diamond:*=reskillable:attack|16
@@ -915,18 +916,18 @@ general {
         spartanshields:shield_tower_silver:*=reskillable:defense|4,reskillable:magic|2
         spartanshields:shield_tower_obsidian:*=reskillable:defense|12
         spartanshields:shield_tower_diamond:*=reskillable:defense|16
-        aquaculture:neptunium_pickaxe:*=reskillable:mining|12
-        aquaculture:neptunium_shovel:*=reskillable:gathering|12
-        aquaculture:neptunium_axe:*=reskillable:gathering|12
-        aquaculture:neptunium_hoe:*=reskillable:farming|12
-        aquaculture:neptunium_sword:*=reskillable:attack|12
-        aquaculture:neptunium_helmet:*=reskillable:defense|12
-        aquaculture:neptunium_chestplate:*=reskillable:defense|12
-        aquaculture:neptunium_leggings:*=reskillable:defense|12
-        aquaculture:neptunium_boots:*=reskillable:defense|12
+        aquaculture:neptunium_pickaxe:*=reskillable:mining|10
+        aquaculture:neptunium_shovel:*=reskillable:gathering|10
+        aquaculture:neptunium_axe:*=reskillable:gathering|10
+        aquaculture:neptunium_hoe:*=reskillable:farming|10
+        aquaculture:neptunium_sword:*=reskillable:attack|10
+        aquaculture:neptunium_helmet:*=reskillable:defense|10
+        aquaculture:neptunium_chestplate:*=reskillable:defense|10
+        aquaculture:neptunium_leggings:*=reskillable:defense|10
+        aquaculture:neptunium_boots:*=reskillable:defense|10
         aquaculture:fishing_rod:*=reskillable:gathering|4
-        aquaculture:iron_fishing_rod:*=reskillable:gathering|8
-        aquaculture:gold_fishing_rod:*=reskillable:gathering|6,reskillable:magic|3
+        aquaculture:iron_fishing_rod:*=reskillable:gathering|6
+        aquaculture:gold_fishing_rod:*=reskillable:gathering|4,reskillable:magic|2
         aquaculture:diamond_fishing_rod:*=reskillable:gathering|12
         advanced-fishing:blazing_fishing_pole:*=reskillable:gathering|16
         lycanitesmobs:equipmentforge_lesser:*=reskillable:building|12
