--- a/config/scalinghealth/main.cfg
+++ b/config/scalinghealth/main.cfg
@@ -260,13 +260,13 @@ main {
             B:"Allow Hostile Extra Health"=true
 
             # Allow peaceful/passive mobs (such as animals) to spawn with extra health based on difficulty.
-            B:"Allow Peaceful Extra Health"=false
+            B:"Allow Peaceful Extra Health"=true
 
             # The minimum extra health a hostile mob will have per point of difficulty, before the scaling mode is accounted for. [range: 0.0 ~ 3.4028234663852886E38, default: 0.5]
-            S:"Base Health Modifier"=0
+            S:"Base Health Modifier"=0.15
 
             # The minimum extra health a peaceful mob will have per point of difficulty, before the scaling mode is accounted for. Same as "Base Health Modifier", but for peaceful/passive mobs! [range: 0.0 ~ 3.4028234663852886E38, default: 0.25]
-            S:"Base Health Modifier Peaceful"=0.25
+            S:"Base Health Modifier Peaceful"=0.1
 
             # Mobs listed here will never receive extra health, and will not become blights. There is also a separate blacklist for blights, if you still want the mob in question to have extra health. [default: ]
             S:Blacklist <
@@ -287,7 +287,6 @@ main {
                 bewitchment:toad
                 minecraft:bat
                 defiledlands:book_wyrm
-                
                 quark:stoneling
                 minecraft:parrot
                 mocreatures:mouse
@@ -316,8 +315,8 @@ main {
             #   MULTI - Multiplies the mob's health instead of adding a flat value. For example, endermen
             #     will always have around twice the health of zombies with this option.
             #   MULTI_HALF - Multiplies the mob's health, but the value is reduced for higher-health mobs.
-            #   MULTI_QUARTER - Same as MULTI_HALF, but the scaling factor is even less. [default: MULTI_HALF]
-            S:"Scaling Mode"=MULTI_HALF
+            #   MULTI_QUARTER - Same as MULTI_HALF, but the scaling factor is even less. [default: ADD]
+            S:"Scaling Mode"=ADD
         }
 
         blights {
@@ -332,7 +331,7 @@ main {
              >
 
             # The amplifier level on the speed potion effect applied to blights. Set -1 to disable, 0 is level 1. [range: -1 ~ 99, default: 4]
-            I:"Amplifier Speed"=4
+            I:"Amplifier Speed"=-1
 
             # The amplifier level on the strength potion effect applied to blights. Set -1 to disable, 0 is level 1. [range: -1 ~ 99, default: 1]
             I:"Amplifier Strength"=2
@@ -369,7 +368,7 @@ main {
             B:"Blacklist All Passives"=true
 
             # Determines the chance of a mob spawning as a blight. Formula is "blightChanceMulti * currentDifficulty / maxDifficulty". Setting to 0 will disable blights. Setting to 1 will guarantee blights at max difficulty. [range: 0.0 ~ 3.4028234663852886E38, default: 0.0625]
-            S:"Blight Chance Multiplier"=0.01
+            S:"Blight Chance Multiplier"=0.03
 
             # When an entity spawns as a blight, their calculated difficulty is multiplied by this. Higher numbers mean more health and damage! [range: 1.0 ~ 3.4028234663852886E38, default: 3.0]
             S:"Blight Difficulty Multiplier"=4
@@ -393,7 +392,7 @@ main {
             B:"Notify Players on Death"=true
 
             # The duration (in ticks) of the potion effects applied to blights. The effects are refreshed frequently, so this value doesn't matter in most cases... except for the lingering potion effects left by blight creepers. Set to -1 for infinite time. Default is 5 minutes. [range: -1 ~ 2147483647, default: 6000]
-            I:"Potion Duration"=6000
+            I:"Potion Duration"=-1
 
             # Blight creepers will be supercharged, like when they are struck by lightning.
             B:"Supercharge Creepers"=true
@@ -437,8 +436,8 @@ main {
     }
 
     pets {
-        # The number of ticks between regen ticks on pets. Set to 0 to disable pet regen. [range: 0 ~ 72000, default: 100]
-        I:"Regen Delay"=100
+        # The number of ticks between regen ticks on pets. Set to 0 to disable pet regen. [range: 0 ~ 72000, default: 60]
+        I:"Regen Delay"=60
     }
 
     items {
@@ -449,7 +448,7 @@ main {
         B:"Healing Items Fire Healing Event"=true
 
         # The chance of a hostile mob dropping a heart container when killed. [range: 0.0 ~ 1.0, default: 0.009999999776482582]
-        S:"Heart Drop Chance"=0.01
+        S:"Heart Drop Chance"=0.015
 
         # The chance of a passive mob (animals) dropping a heart container when killed. [range: 0.0 ~ 1.0, default: 0.0010000000474974513]
         S:"Heart Drop Chance (Passive)"=0.001
@@ -464,7 +463,7 @@ main {
         I:"Hearts Dropped by Blight Max"=8
 
         # The minimum number of heart containers that a blight will drop when killed. [range: 0 ~ 64, default: 0]
-        I:"Hearts Dropped by Blight Min"=2
+        I:"Hearts Dropped by Blight Min"=3
 
         # The maximum number of heart containers that a boss will drop when killed. [range: 0 ~ 64, default: 6]
         I:"Hearts Dropped by Boss Max"=16
@@ -499,7 +498,7 @@ main {
         #   DISTANCE_FROM_SPAWN - Based on the mob's distance from spawn.
         #   DISTANCE_FROM_ORIGIN - Based on the mob's distance from the origin.
         #   DISTANCE_AND_TIME - Mix of DISTANCE_FROM_SPAWN and WEIGHTED_AVERAGE.
-        #   SERVER_WIDE - Difficulty is tracked at a server level, individual player difficulty has no impact. [default: WEIGHTED_AVERAGE]
+        #   SERVER_WIDE - Difficulty is tracked at a server level, individual player difficulty has no impact. [default: DISTANCE_AND_TIME]
         S:"Area Mode"=DISTANCE_AND_TIME
 
         # Change in difficulty when a player sleeps through the night. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
@@ -515,7 +514,7 @@ main {
         S:"Difficulty Per Blight Kill"=0.0
 
         # The amount of difficulty added per unit distance from the origin/spawn, assuming "Area Mode" is set to a distance-based option. Negative numbers will decrease difficulty over distance. [range: -3.4028234663852886E38 ~ 3.4028234663852886E38, default: 0.0024999999441206455]
-        S:"Difficulty Per Block"=0.0024999999441206455
+        S:"Difficulty Per Block"=0
 
         # Difficulty change per boss kill. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
         S:"Difficulty Per Boss Kill"=0.0
@@ -551,16 +550,16 @@ main {
         S:"Idle Multiplier"=0
 
         # The amount difficulty changes each second. In Difficult Life, the option was named per tick, but was actually applied each second. Negative numbers will decrease difficulty over time. [range: -10000.0 ~ 10000.0, default: 0.0011573999654501677]
-        S:"Increase Per Second"=0.000625
+        S:"Increase Per Second"=0.00
 
         # The difficulty a player loses on death. Negative numbers cause the player to gain difficulty. [range: -10000.0 ~ 10000.0, default: 0.0]
-        S:"Lost On Death"=1.0
+        S:"Lost On Death"=0
 
         # The maximum difficulty level that can be reached. [range: 0.0 ~ 3.4028234663852886E38, default: 250.0]
-        S:"Max Value"=250.0
+        S:"Max Value"=50
 
         # The minimum difficulty value. This can be different from the starting value. [range: 0.0 ~ 3.4028234663852886E38, default: 0.0]
-        S:"Min Value"=0.0
+        S:"Min Value"=50
 
         # Allows players' difficulty to be reset at certain frequencies.
         #   NONE - Do not do regular resets.  Weekdays (SUNDAY, MONDAY, etc.) - Reset on this day of the week. If the player does not play on this day, they will be reset the next time they log in.
