--- a/config/corpsecomplex.cfg
+++ b/config/corpsecomplex.cfg
@@ -8,7 +8,7 @@
 
 effects {
     # Set to true to enable effects module
-    B:"Enable Effects Module"=false
+    B:"Enable Effects Module"=true
 
     # List of effects to apply to players on respawn that can be cured by the curing items list
     # Format: [effect] [duration(secs)] [power]
@@ -23,7 +23,7 @@ effects {
     # List of effects to apply to player on respawn
     # Format: [effect] [duration(secs)] [power]
     S:"Uncurable Respawn Effects" <
-        minecraft:mining_fatigue 30 4
+        minecraft:blindness 1 1
      >
 
     ##########################################################################################################
@@ -83,7 +83,7 @@ effects {
 
 experience {
     # Set to true to enable experience module
-    B:"Enable Experience Module"=false
+    B:"Enable Experience Module"=true
 
     # Set to true to keep all XP on death
     B:"Keep All XP"=false
@@ -95,7 +95,7 @@ experience {
     I:"Maximum Recoverable XP"=0
 
     # Percent of lost experience that can be recovered
-    D:"Recoverable XP Percent"=0.75
+    D:"Recoverable XP Percent"=0.9
 }
 
 
