--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -145,6 +145,7 @@ entitiesalwaysinfernal {
     B:EntityZombieVillager=false
     B:Guardian=false
     B:Husk=false
+    B:LavaSlime=false
     B:MoCEntityCaveOgre=false
     B:MoCEntityFireOgre=false
     B:MoCEntityFlameWraith=false
@@ -230,9 +231,12 @@ entitiesalwaysinfernal {
     B:stymphalianbird=false
     B:treant=false
     B:trumpetskeleton.TrumpetSkeleton=false
-    B:twilightforest.minoshroom=false
-    B:twilightforest.snow_queen=false
     B:twilightforest.lich=false
+    B:twilightforest.minoshroom=false
+    B:twilightforest.naga=false
+    B:twilightforest.snow_queen=false
+    B:twilightforest.ur_ghast=false
+    B:twilightforest.yeti_alpha=false
     B:wendigo=false
 }
 
@@ -374,6 +378,8 @@ entitybasehealth {
     D:defiledlands.shambler=40.0
     D:defiledlands.slime_defiled=1.0
     D:dread_knight=200.0
+    D:dread_scuttler=372.66046142578125
+    D:dread_thrall=180.33206176757812
     D:"ebwizardry:evil_wizard"=30.0
     D:ferrous_wroughtnaut=60.74569320678711
     D:frostmaw=759.5997924804688
@@ -397,11 +403,13 @@ entitybasehealth {
     D:"mocreatures:silverskeleton"=35.14849090576172
     D:"mocreatures:werewolf"=40.0
     D:"mocreatures:wraith"=10.0
+    D:"mocreatures:wwolf"=15.0
     D:"quark:ashen"=20.0
     D:"quark:dweller"=20.0
     D:"quark:pirate"=20.0
     D:siren=50.0
     D:stymphalianbird=24.0
+    D:treant=132.0
     D:trumpetskeleton.TrumpetSkeleton=20.0
     D:twilightforest.minoshroom=6000.0
     D:wendigo=44.0
@@ -598,6 +606,7 @@ permittedentities {
     B:EntityZombieVillager=true
     B:Guardian=true
     B:Husk=true
+    B:LavaSlime=true
     B:MoCEntityCaveOgre=true
     B:MoCEntityFireOgre=true
     B:MoCEntityFlameWraith=true
@@ -675,8 +684,8 @@ permittedentities {
     B:"mocreatures:werewolf"=true
     B:"mocreatures:wraith"=true
     B:"mocreatures:wwolf"=true
-    B:pirate_mimic=true
     B:naga=true
+    B:pirate_mimic=true
     B:"quark:ashen"=true
     B:"quark:dweller"=true
     B:"quark:pirate"=true
@@ -684,9 +693,12 @@ permittedentities {
     B:stymphalianbird=true
     B:treant=true
     B:trumpetskeleton.TrumpetSkeleton=true
-    B:twilightforest.minoshroom=true
-    B:twilightforest.snow_queen=true
     B:twilightforest.lich=true
+    B:twilightforest.minoshroom=true
+    B:twilightforest.naga=true
+    B:twilightforest.snow_queen=true
+    B:twilightforest.ur_ghast=true
+    B:twilightforest.yeti_alpha=true
     B:wendigo=true
 }
 
