copper weap reqs + tree chopper battleaxe

--- a/config/reskillable.cfg
+++ b/config/reskillable.cfg
@@ -565,6 +565,26 @@ general {
         spartanweaponry:mace_stone:*=reskillable:attack|2
         spartanweaponry:glaive_stone:*=reskillable:attack|2
         spartanweaponry:staff_stone:*=reskillable:agility|2
+        spartanweaponry:dagger_copper:*=reskillable:agility|2
+        spartanweaponry:longsword_copper:*=reskillable:attack|2
+        spartanweaponry:katana_copper:*=reskillable:agility|2
+        spartanweaponry:saber_copper:*=reskillable:attack|2
+        spartanweaponry:rapier_copper:*=reskillable:agility|2
+        spartanweaponry:greatsword_copper:*=reskillable:attack|2
+        spartanweaponry:hammer_copper:*=reskillable:attack|2
+        spartanweaponry:warhammer_copper:*=reskillable:attack|2
+        spartanweaponry:spear_copper:*=reskillable:agility|2
+        spartanweaponry:halberd_copper:*=reskillable:agility|2
+        spartanweaponry:pike_copper:*=reskillable:attack|2
+        spartanweaponry:lance_copper:*=reskillable:attack|2
+        spartanweaponry:throwing_knife_copper:*=reskillable:agility|2
+        spartanweaponry:throwing_axe_copper:*=reskillable:agility|2
+        spartanweaponry:javelin_copper:*=reskillable:agility|2
+        spartanweaponry:boomerang_copper:*=reskillable:agility|2
+        spartanweaponry:battleaxe_copper:*=reskillable:attack|2
+        spartanweaponry:mace_copper:*=reskillable:attack|2
+        spartanweaponry:glaive_copper:*=reskillable:attack|2
+        spartanweaponry:staff_copper:*=reskillable:agility|2
         spartanweaponry:dagger_electrum:*=reskillable:agility|2
         spartanweaponry:longsword_electrum:*=reskillable:attack|2
         spartanweaponry:katana_electrum:*=reskillable:agility|2
