--- a/config/treechopper/treechopper.cfg
+++ b/config/treechopper/treechopper.cfg
@@ -171,6 +171,7 @@ data {
         item.iceandfire.myrmex_jungle_axe
         item.iceandfire.troll_weapon.axe
         item.spartanweaponry:battleaxe_iron
+        item.spartanweaponry:battleaxe_wood
         item.spartanweaponry:battleaxe_bronze
         item.spartanweaponry:battleaxe_stone
         item.spartanweaponry:battleaxe_silver
