--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -372,6 +372,7 @@ entitybasehealth {
     D:WitherSkeleton=46.166046142578125
     D:Zombie=20
     D:ZombieVillager=20.0
+    D:barakoan_barakoana=20.842906951904297
     D:barakoana=10.0
     D:barakoaya=10.0
     D:bound_soul=39.69782257080078
