--- a/config/battletowers.cfg
+++ b/config/battletowers.cfg
@@ -95,6 +95,7 @@ biomespawnallowed {
     B:coniferous_forest=true
     B:coral_reef=true
     B:corrupted_sands=true
+    B:crag=true
     B:crag_cliffs=true
     B:dark_forest=true
     B:dark_forest_center=true
@@ -167,6 +168,7 @@ biomespawnallowed {
     B:mutated_forest=true
     B:mutated_ice_flats=true
     B:mutated_jungle=true
+    B:mutated_jungle_edge=true
     B:mutated_mesa=true
     B:mutated_plains=true
     B:mutated_redwood_taiga=true
@@ -182,6 +184,7 @@ biomespawnallowed {
     B:ocean=true
     B:ominous_woods=true
     B:orchard=true
+    B:outback=true
     B:overgrown_cliffs=true
     B:pasture=true
     B:phantasmagoric_inferno=true
@@ -210,6 +213,7 @@ biomespawnallowed {
     B:snowy_coniferous_forest=true
     B:snowy_forest=true
     B:snowy_tundra=true
+    B:spooky_forest=true
     B:steppe=true
     B:stone_beach=true
     B:swamp_defiled=true
@@ -237,6 +241,7 @@ biomespawnallowed {
     B:woodland=true
     B:woodlands=true
     B:wyvernbiome=true
+    B:xeric_shrubland=true
 }
 
 
