--- a/config/materialchanger.cfg
+++ b/config/materialchanger.cfg
@@ -99,6 +99,13 @@ changer {
         DURABILITY;iceandfire:dread_sword;1000
         DURABILITY;iceandfire:dread_knight_sword;1250
         DURABILITY;iceandfire:dread_queen_sword;1500
+
+        ARMOR_PROTECTION;twilightforest:naga_chestplate;16
+        ARMOR_PROTECTION;twilightforest:naga_leggings;15
+        ARMOR_TOUGHNESS;twilightforest:naga_chestplate;5
+        ARMOR_TOUGHNESS;twilightforest:naga_leggings;5
+        DURABILITY;twilightforest:naga_chestplate;1200
+        DURABILITY;twilightforest:naga_leggings;1200
         
         ARMOR_PROTECTION;twilightforest:ironwood_helmet;12
         ARMOR_PROTECTION;twilightforest:ironwood_chestplate;18
@@ -198,12 +205,19 @@ changer {
         DURABILITY;twilightforest:knightmetal_chestplate;1600
         DURABILITY;twilightforest:knightmetal_leggings;1600
         DURABILITY;twilightforest:knightmetal_boots;1600
+
+        ARMOR_PROTECTION;twilightforest:phantom_helmet;20
+        ARMOR_PROTECTION;twilightforest:phantom_chestplate;28
+        ARMOR_TOUGHNESS;twilightforest:phantom_helmet;6
+        ARMOR_TOUGHNESS;twilightforest:phantom_chestplate;6
+        DURABILITY;twilightforest:phantom_helmet;1600
+        DURABILITY;twilightforest:phantom_chestplate;1600
         
         ATTACK_DAMAGE;twilightforest:knightmetal_sword;70
         ATTACK_DAMAGE;twilightforest:knightmetal_axe;90
         DURABILITY;twilightforest:knightmetal_sword;1600
-        DURABILITY;twilightforest:knightmetal_pickaxe;70
-        DURABILITY;twilightforest:knightmetal_axe;70
+        DURABILITY;twilightforest:knightmetal_pickaxe;1600
+        DURABILITY;twilightforest:knightmetal_axe;1600
         HARVEST_LEVEL;twilightforest:knightmetal_pickaxe;9
         HARVEST_LEVEL;twilightforest:knightmetal_axe;9
         EFFICIENCY;twilightforest:knightmetal_pickaxe;16
@@ -248,7 +262,7 @@ changer {
         
         ATTACK_DAMAGE;twilightforest:glass_sword;90
         DURABILITY;twilightforest:glass_sword;200
-        ENCHANTABILITY;twilightforest:glass_sword;20
+        ENCHANTABILITY;twilightforest:glass_sword;30
      >
 }
 
