--- a/config/reskillable.cfg
+++ b/config/reskillable.cfg
@@ -1321,6 +1321,8 @@ general {
         industrialforegoing:mob_imprisonment_tool:*=reskillable:farming|32,reskillable:gathering|32,reskillable:magic|32
         twilightforest:naga_leggings:*=reskillable:defense|30,reskillable:agility|24
         twilightforest:naga_chestplate:*=reskillable:defense|30,reskillable:agility|24
+        twilightforest:minotaur_axe_gold:*=reskillable:attack|30,reskillable:agility|24
+        twilightforest:minotaur_axe:*=reskillable:attack|32,reskillable:agility|24
         twilightforest:ironwood_helmet:*=reskillable:defense|32,reskillable:agility|28
         twilightforest:ironwood_chestplate:*=reskillable:defense|32,reskillable:agility|28
         twilightforest:ironwood_leggings:*=reskillable:defense|24,reskillable:agility|32
@@ -1341,6 +1343,9 @@ general {
         twilightforest:knightmetal_leggings:*=reskillable:defense|40,reskillable:agility|28
         twilightforest:knightmetal_boots:*=reskillable:defense|40,reskillable:agility|28
         twilightforest:knightmetal_sword:*=reskillable:attack|40,reskillable:agility|28
+        twilightforest:knightmetal_axe:*=reskillable:attack|40,reskillable:gathering|28
+        twilightforest:knightmetal_pickaxe:*=reskillable:mining|40,reskillable:gathering|28
+        twilightforest:giant_pickaxe:*=reskillable:mining|40
         twilightforest:giant_sword:*=reskillable:attack|40,reskillable:agility|32
         twilightforest:phantom_helmet:*=reskillable:defense|40,reskillable:agility|32
         twilightforest:phantom_chestplate:*=reskillable:defense|40,reskillable:agility|32
@@ -1383,7 +1388,7 @@ skill {
         B:Enabled=true
         I:"Level Cap"=48
         S:"Level Staggering" <
-            1|3
+            1|1
          >
         B:LevelButton=true
         I:"Skill Point Interval"=2
