worldgen_t2fix_movementqolmods_noswitchbow

--- a/config/First Aid.cfg
+++ b/config/First Aid.cfg
@@ -50,7 +50,7 @@ general {
 
         # Min: 2
         # Max: 12
-        I:maxHealthBody=6
+        I:maxHealthBody=8
 
         # Min: 2
         # Max: 12
@@ -58,11 +58,11 @@ general {
 
         # Min: 2
         # Max: 12
-        I:maxHealthLeftArm=6
+        I:maxHealthLeftArm=4
 
         # Min: 2
         # Max: 12
-        I:maxHealthLeftFoot=6
+        I:maxHealthLeftFoot=4
 
         # Min: 2
         # Max: 12
@@ -70,11 +70,11 @@ general {
 
         # Min: 2
         # Max: 12
-        I:maxHealthRightArm=6
+        I:maxHealthRightArm=4
 
         # Min: 2
         # Max: 12
-        I:maxHealthRightFoot=6
+        I:maxHealthRightFoot=4
 
         # Min: 2
         # Max: 12
@@ -101,7 +101,7 @@ general {
         # REPLACE
         # APPEND
         # NONE
-        S:armorTooltipMode=REPLACE
+        S:armorTooltipMode=APPEND
 
         # Disables the funny easter eggs on certain events
         B:enableEasterEggs=true
@@ -376,7 +376,7 @@ general {
             # The time it takes in the GUI to apply the item in milliseconds
             # Min: 0
             # Max: 16000
-            I:applyTime=3000
+            I:applyTime=2000
 
             # The time it takes for a single heal to trigger. Total time this item is active = this * totalHeals
             # Min: 1
