--- a/config/reskillable.cfg
+++ b/config/reskillable.cfg
@@ -17,7 +17,7 @@ general {
     B:"Enforce requirements on Fake Players"=true
 
     # Set this to false to not require holding down the shift key to view requirements!
-    B:"Hide Requirements"=false
+    B:"Hide Requirements"=true
 
     # Set requirements for items in this list. Each entry is composed of the item key and the requirements
     # The item key is in the simple mod:item_id format. Optionally, it can be in mod:item_id:metadata, if you want to match metadata.
@@ -473,10 +473,10 @@ general {
         lycanitesmobs:bloodleechscepter:*=reskillable:magic|4
         lycanitesmobs:poisonrayscepter:*=reskillable:magic|4
         lycanitesmobs:venomshotscepter:*=reskillable:magic|4
-        spartanweaponry:longbow_wood:*=reskillable:attack|2,reskillable:agility|2
-        spartanweaponry:longbow_leather:*=reskillable:attack|2,reskillable:agility|4
-        spartanweaponry:crossbow_wood:*=reskillable:attack|2,reskillable:agility|2
-        spartanweaponry:crossbow_leather:*=reskillable:attack|4,reskillable:agility|2
+        spartanweaponry:longbow_wood:*=reskillable:agility|2
+        spartanweaponry:longbow_leather:*=reskillable:agility|2
+        spartanweaponry:crossbow_wood:*=reskillable:attack|2
+        spartanweaponry:crossbow_leather:*=reskillable:attack|2,reskillable:agility|2
         spartanweaponry:longbow_copper:*=reskillable:attack|2,reskillable:agility|3
         spartanweaponry:crossbow_copper:*=reskillable:attack|3,reskillable:agility|2
         spartanweaponry:dagger_iron:*=reskillable:agility|8
@@ -1488,9 +1488,9 @@ trait {
     "reskillable:hillwalker" {
         B:Enabled=true
         S:Requirements <
-            reskillable:agility|8
+            reskillable:agility|14
          >
-        I:"Skill Point Cost"=4
+        I:"Skill Point Cost"=6
         I:"X-Pos [0-4]:"=2
         I:"Y-Pos [0-3]:"=2
     }
@@ -1498,10 +1498,10 @@ trait {
     "reskillable:roadwalk" {
         B:Enabled=true
         S:Requirements <
-            reskillable:agility|12
+            reskillable:agility|8
             reskillable:building|4
          >
-        I:"Skill Point Cost"=6
+        I:"Skill Point Cost"=4
         I:"X-Pos [0-4]:"=1
         I:"Y-Pos [0-3]:"=1
     }
@@ -1587,7 +1587,7 @@ trait {
     "reskillable:more_wheat" {
         B:Enabled=true
         S:Requirements <
-            reskillable:farming|12
+            reskillable:farming|6
             reskillable:gathering|6
          >
         I:"Skill Point Cost"=2
@@ -1624,7 +1624,7 @@ trait {
             reskillable:attack|8
             reskillable:magic|4
          >
-        I:"Skill Point Cost"=8
+        I:"Skill Point Cost"=6
         I:"X-Pos [0-4]:"=1
         I:"Y-Pos [0-3]:"=1
     }
