--- a/config/scalinghealth/main.cfg
+++ b/config/scalinghealth/main.cfg
@@ -158,7 +158,7 @@ main {
             I:Delay=250
 
             # The amount of time (in ticks) after being hurt before bonus regen activates. [range: 0 ~ 2147483647, default: 400]
-            I:"Delay (Initial)"=500
+            I:"Delay (Initial)"=400
 
             # Enable bonus health regen for players. Vanilla regen is not changed in any way, this just adds extra healing! Vanilla regen can be disabled with the naturalRegeneration gamerule.
             B:"Enable Bonus Regen"=true
@@ -173,7 +173,7 @@ main {
             I:"Food Min"=17
 
             # Bonus regen will stop when players have this much health or more. [range: 0 ~ 2147483647, default: 2147483647]
-            I:"Health Max"=12
+            I:"Health Max"=20
 
             # Bonus regen will stop when players have this much health or less. [range: 0 ~ 2147483647, default: 0]
             I:"Health Min"=0
@@ -315,7 +315,7 @@ main {
             #   MULTI - Multiplies the mob's health instead of adding a flat value. For example, endermen
             #     will always have around twice the health of zombies with this option.
             #   MULTI_HALF - Multiplies the mob's health, but the value is reduced for higher-health mobs.
-            #   MULTI_QUARTER - Same as MULTI_HALF, but the scaling factor is even less. [default: ADD]
+            #   MULTI_QUARTER - Same as MULTI_HALF, but the scaling factor is even less. [default: MULTI_HALF]
             S:"Scaling Mode"=ADD
         }
 
@@ -401,16 +401,16 @@ main {
             S:"XP Multiplier"=45
 
             equipment {
-                # The chance of an additional armor piece being given. Every blight receives a helmet, then has this probability of receiving a chestplate. If it gets a chestplate, it has this probability of receiving leggings, etc. [range: 0.0 ~ 1.0, default: 1.0]
+                # The chance of an additional armor piece being given. Every blight receives a helmet, then has this probability of receiving a chestplate. If it gets a chestplate, it has this probability of receiving leggings, etc. [range: 0.0 ~ 1.0, default: 0.5]
                 S:"Armor Piece Chance"=1
 
-                # The chance that a blight will receive equipment in their hands (swords, etc.) They only get a chance at an offhand item if a main hand item is selected. Depending on the mods you have installed, there may not be any hand equipment to chose from. [range: 0.0 ~ 1.0, default: 1.0]
+                # The chance that a blight will receive equipment in their hands (swords, etc.) They only get a chance at an offhand item if a main hand item is selected. Depending on the mods you have installed, there may not be any hand equipment to chose from. [range: 0.0 ~ 1.0, default: 0.5]
                 S:"Hand Piece Chance"=1
 
-                # The highest commonly-occuring equipment tier for blights. This goes from 0 to 4 inclusive. For armor, the defaults (tiers 0 to 4) are leather, gold, chainmail, iron, and diamond. [range: 0 ~ 4, default: 3]
+                # The highest commonly-occuring equipment tier for blights. This goes from 0 to 4 inclusive. For armor, the defaults (tiers 0 to 4) are leather, gold, chainmail, iron, and diamond. [range: 0 ~ 4, default: 1]
                 I:"Highest Common Tier"=3
 
-                # The chance that a higher tier will be selected for a blight. A common tier is chosen first, then it has a few chances to increase. [range: 0.0 ~ 1.0, default: 0.065]
+                # The chance that a higher tier will be selected for a blight. A common tier is chosen first, then it has a few chances to increase. [range: 0.0 ~ 1.0, default: 0.095]
                 S:"Tier Up Chance"=0.065
             }
 
@@ -436,7 +436,7 @@ main {
     }
 
     pets {
-        # The number of ticks between regen ticks on pets. Set to 0 to disable pet regen. [range: 0 ~ 72000, default: 60]
+        # The number of ticks between regen ticks on pets. Set to 0 to disable pet regen. [range: 0 ~ 72000, default: 600]
         I:"Regen Delay"=60
     }
 
@@ -498,7 +498,7 @@ main {
         #   DISTANCE_FROM_SPAWN - Based on the mob's distance from spawn.
         #   DISTANCE_FROM_ORIGIN - Based on the mob's distance from the origin.
         #   DISTANCE_AND_TIME - Mix of DISTANCE_FROM_SPAWN and WEIGHTED_AVERAGE.
-        #   SERVER_WIDE - Difficulty is tracked at a server level, individual player difficulty has no impact. [default: DISTANCE_AND_TIME]
+        #   SERVER_WIDE - Difficulty is tracked at a server level, individual player difficulty has no impact. [default: WEIGHTED_AVERAGE]
         S:"Area Mode"=DISTANCE_AND_TIME
 
         # Change in difficulty when a player sleeps through the night. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
@@ -602,7 +602,7 @@ main {
             # The maximum number of extra veins created by distance from spawn. [range: 0.0 ~ 1000.0, default: 3.0]
             S:"Extra Vein Cap"=3.0
 
-            # The number of extra possible veins per chunk away from spawn. The default value will reach the cap at 50,000 blocks from spawn. [range: 0.0 ~ 1.0, default: 0.5]
+            # The number of extra possible veins per chunk away from spawn. The default value will reach the cap at 50,000 blocks from spawn. [range: 0.0 ~ 1.0, default: 9.6E-4]
             S:"Extra Vein Rate"=0.5
 
             # The highest y-level the ore can be found at. Must be greater than Min Height [range: 0 ~ 255, default: 35]
@@ -614,10 +614,10 @@ main {
             # The base number of heart crystal shards dropped by the ore. Fortune III can double this value at most. [range: 1 ~ 64, default: 1]
             I:"Quantity Dropped"=1
 
-            # The size of each vein. [range: 0 ~ 10000, default: 4]
+            # The size of each vein. [range: 0 ~ 10000, default: 6]
             I:"Vein Size"=4
 
-            # The number of veins per chunk. The fractional part is a probability of an extra vein in each chunk. [range: 0.0 ~ 10000.0, default: 0.5]
+            # The number of veins per chunk. The fractional part is a probability of an extra vein in each chunk. [range: 0.0 ~ 10000.0, default: 0.42857143]
             S:"Veins Per Chunk"=0.5
         }
 
