--- a/config/dimensionalcontrol/presets/Uncharted_Territories/biomeproviders/RL.cfg
+++ b/config/dimensionalcontrol/presets/Uncharted_Territories/biomeproviders/RL.cfg
@@ -1,16 +1,3 @@
-
-#Sets the DimensionDefinition object for dimension 0 and stores it as a variable
-dimension0 = setDimensionDefinition(0)
-
-#Sets the ChunkGenerator object for dimension 0 and stores it as a variable
-chunkGenerator0 = dimension0.setChunkGeneratorDefinition()
-
-//Sets ChunkGeneratorType for dimension 0 to be "Surface". This is the vanilla overworld ChunkGenerator.
-dimension0.setChunkGeneratorType("Surface")
-
-//Sets the generator options for the ChunkGenerator. Credit to /u/Soniop
-chunkGenerator0.setGenerationOptions({"coordinateScale":175.0,"heightScale":75.0,"lowerLimitScale":512.0,"upperLimitScale":512.0,"depthNoiseScaleX":200.0,"depthNoiseScaleZ":200.0,"depthNoiseScaleExponent":0.5,"mainNoiseScaleX":500.0,"mainNoiseScaleY":500,"mainNoiseScaleZ":165.0,"baseSize":8.267606,"stretchY":13.387607,"biomeDepthWeight":1.2,"biomeDepthOffset":0.2,"biomeScaleWeight":2.4084506,"biomeScaleOffset":0.0,"seaLevel":63,"useCaves":true,"useDungeons":true,"dungeonChance":7,"useStrongholds":true,"useVillages":true,"useMineShafts":true,"useTemples":true,"useMonuments":true,"useRavines":true,"useWaterLakes":true,"waterLakeChance":35,"useLavaLakes":true,"lavaLakeChance":18,"useLavaOceans":false,"fixedBiome":-1,"biomeSize":8,"riverSize":6,"dirtSize":33,"dirtCount":10,"dirtMinHeight":0,"dirtMaxHeight":256,"gravelSize":33,"gravelCount":8,"gravelMinHeight":0,"gravelMaxHeight":256,"graniteSize":33,"graniteCount":10,"graniteMinHeight":0,"graniteMaxHeight":80,"dioriteSize":33,"dioriteCount":10,"dioriteMinHeight":0,"dioriteMaxHeight":80,"andesiteSize":33,"andesiteCount":10,"andesiteMinHeight":0,"andesiteMaxHeight":80,"coalSize":17,"coalCount":20,"coalMinHeight":0,"coalMaxHeight":128,"ironSize":9,"ironCount":20,"ironMinHeight":0,"ironMaxHeight":64,"goldSize":9,"goldCount":2,"goldMinHeight":0,"goldMaxHeight":32,"redstoneSize":8,"redstoneCount":8,"redstoneMinHeight":0,"redstoneMaxHeight":16,"diamondSize":8,"diamondCount":1,"diamondMinHeight":0,"diamondMaxHeight":16,"lapisSize":7,"lapisCount":1,"lapisCenterHeight":16,"lapisSpread":16})
-
 addSpawnBiome("minecraft:forest")
 addSpawnBiome("minecraft:birch_forest")
 addSpawnBiome("minecraft:mutated_forest")
@@ -97,7 +84,7 @@ genLayer = new GenLayerTouching(1004, genLayer)
 genLayer.addData("minecraft:ocean", ["minecraft:deep_ocean","minecraft:ocean"], null, 6, "biomesoplenty:tropical_island", 14)
 
 genLayer = new GenLayerTouching(1005, genLayer)
-genLayer.addData("minecraft:ocean", null, 8, "minecraft:deep_ocean")
+genLayer.addData("minecraft:ocean", "ocean", null, 8, "minecraft:deep_ocean")
 
 //genLayer = new GenLayerAddIsland(2, genLayer)
 
