--- a/config/enhancedvisuals.cfg
+++ b/config/enhancedvisuals.cfg
@@ -17,10 +17,10 @@ blur-type {
 
 damage-handler {
     # max duration of blood splash [range: 1 ~ 100000, default: 1500]
-    I:bloodDurationMax=0
+    I:bloodDurationMax=1500
 
     # min duration of blood splash [range: 1 ~ 100000, default: 500]
-    I:bloodDurationMin=0
+    I:bloodDurationMin=500
 
     # max duration of one splash [range: 1 ~ 10000, default: 15]
     I:drownMaxDuration=30
@@ -72,46 +72,7 @@ deathmessages {
 
     #  [default: [Do you really want to respawn? think of it again.], [Life is hard. Deal with it!], [You are dead ... wait you already know that.], [Did I let the stove on...?], [Should have shot back first...], [Yep, that's messed up...], [Rage incomming!], [I think you dropped something.], [Time for a break?]]
     S:messages <
-        Do you really want to respawn? Think about it...
-        Life is hard. Deal with it.
-        You are dead ... wait you already know that.
-        Did I leave the stove on...?
-        Should have shot back first...
-        Yep, that's messed up...
-        Rage incoming!
-        I think you dropped something.
-        Time for a break?
-        RLCraft is kinda a bitch huh?
-        Your deeds of valor will be remembered.
-        Just go yell at Shivaxi ... you'll feel better, I promise.
-        Git Gud.
-        F's in the chat.
-        Rest in rice.
-        RIP, hey at least you tried.
-        Have you considered peaceful mode?
-        You forgot to heal, didn't you?
-        ALT+F4 may solve all your problems.
-        Blame lag.
-        You do not meet the requirements to survive.
-        Just hug Sven and it'll be okay.
-        Continue? Insert coin.
-        Someone forgot to drink Shroud coffee this morning.
-        Just blame X33N.
-        Aww man...
-        Death is coming in BLAZING HOT!!!
-        Where's Gonzo and Matatatutu when you need them?
-        Have you tried not dying?
-        At least you didn't drive your horse into lava.
-        This is so sad...follow @Elppayt on twitter.
-        That was not very pimp chimpin...
-        First Try :)
-        ZERO DEATHS!!!
-        5 YEARS!!
-        Zyllama had no idea what he was doing, neither do you I see.
-        NULL ERROR - snarky death message not found.
-        Working as intended.
-        Just dodge lmao.
-        KEKW
+        Is this... the end?
      >
 }
 
@@ -172,7 +133,7 @@ explosion-handler {
     S:minExplosionVolume=0.0
 
     # If true plays short ringing sound [default: false]
-    B:useShortRinging=false
+    B:useShortRinging=true
 }
 
 
@@ -247,7 +208,7 @@ general {
     B:enabled=true
 
     # Below or equal this amount of health enables the heartbeat effect [range: 0 ~ 100, default: 6]
-    I:healthLevel=6
+    I:healthLevel=10
 
     # Below or equal this percent of health enables the heartbeat effect [range: 0.0 ~ 1.0, default: 0.3]
     S:healthLevelPercentage=0.3
@@ -344,16 +305,16 @@ potion-type {
 
 sand-handler {
     # modifier: splashes per tick = (int) modifier * Math.random() [range: 0.0 ~ 10000.0, default: 0.5]
-    S:defaultmodifier=0.5
+    S:defaultmodifier=0.8
 
     #  [default: true]
     B:enabled=true
 
     # max duration of one splash [range: 1 ~ 10000, default: 100]
-    I:maxDuration=100
+    I:maxDuration=120
 
     # min duration of one splash [range: 1 ~ 10000, default: 100]
-    I:minDuration=25
+    I:minDuration=100
 
     # sprinting -> increased modifier [range: 0.0 ~ 10000.0, default: 1.5]
     S:sprintingmodifier=1.5
@@ -362,7 +323,7 @@ sand-handler {
 
 sand-type {
     #  [range: 0.0 ~ 1.0, default: 1.0]
-    S:alpha=0.5
+    S:alpha=0.7
 
     # If the effect is enabled! [default: true]
     B:enabled=true
