--- a/config/treasure2/treasure2-c1.0.cfg
+++ b/config/treasure2/treasure2-c1.0.cfg
@@ -1246,6 +1246,7 @@ general {
             mocreatures
             sgs_metals
             immersiveengineering
+            ebwizardry
          >
 
         # A list of mods that have prebuilt loot tables available.
@@ -1255,6 +1256,7 @@ general {
             mocreatures
             sgs_metals
             immersiveengineering
+            ebwizardry
          >
     }
 
